# fideo

./: CHANGELOG  CMakeLists.txt  CONTRIBUTORS  README  SConscript  fideo.h
externalTools/: install.sh
fideo/: Combinator.h  CombinatorInline.h  DetFileParser.h  FideoConfig.h  FideoHelper.h  FideoHelperInline.h  FideoStructureParser.h  IFold.h  IFoldIntermediate.h  IFoldInverse.h  IHybridize.h  IHybridizeIntermediate.h  IMotifObserver.h  INFORNA.h  INFORNA.sh  INFORNAMock.sh  IStartProvider.h  IStructureCmp.h  IntaRNA.h  RNABackendProxy.h  RNABackendsConfig.h  RNAFold.h  RNAFoldInverse.h  RNAHybrid.h  RNAStartInverse.h  RNAcofold.h  RNAduplex.h  RNAinverse.sh  RNAinverseMock.sh  RNAup.h  RnaBackendsException.h  RnaBackendsTypes.h  Rule.h  TmpFile.h  UNAFold.h  fideo.h  rna_backends_exceptions.h  rna_backends_types.h
src/: FideoConfig.cpp  FideoHelper.cpp  FoldIntermediate.cpp  HybridizeIntermediate.cpp  INFORNA.cpp  IntaRNA.cpp  RNABackendProxy.cpp  RNABackendsFactory.cpp  RNAFold.cpp  RNAFoldInverse.cpp  RNAForester.cpp  RNAHybrid.cpp  RNAStartInverse.cpp  RNAcofold.cpp  RNAduplex.cpp  RNAup.cpp  SecStructure.cpp  TmpFile.cpp  UNAFold.cpp
test/: FideoConfigTest.cpp  HelperTest.cpp  HelperTest.h  IntaRNATest.cpp  RNAFoldTest.cpp  RNAHybridTest.cpp  RNAcofoldTest.cpp  RNAduplexTest.cpp  RNAupTest.cpp  SConscript  unafold_test.cpp  unafold_test.cpp.orig
tests/: DetFileTest.cpp  HelperTest.cpp  HelperTest.h  INFORNATests.cpp  IntaRNATest.cpp  RNAFoldTest.cpp  RNAForesterTest.cpp  RNAHybridTest.cpp  RNAcofoldTest.cpp  RNAduplexTest.cpp  RNAinverseTests.cpp  RNAupTest.cpp  SConscript  UNAFoldTest.cpp  fileToParse.det
